// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TEXTSQUAREUI SNAPSHOTS TESTS high small TextSquareUI should not be changed 1`] = `
<div
  class="value  value_high"
  role="div-text"
>
  9.5
</div>
`;

exports[`TEXTSQUAREUI SNAPSHOTS TESTS no high medium TextSquareUI should not be changed 1`] = `
<div
  class="value"
  role="div-text"
>
  6.5
</div>
`;
